dark mode toggler repair

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ button:hover {
   topcenter: 5px;
   right: 20px;
   z-index: 7;
+  margin-top: 5px;
 }
 .dark-mode-toggler label {
   position: relative;
